kubernetes/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-database-service
  namespace: ml-namespace 
spec:
  selector:
    app: ml-db
  ports:
    - name: http 
      port: 5435
      targetPort: 5432
      protocol: TCP 

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ml-database
  namespace: ml-namespace
spec:
  selector:
    matchLabels:
      app: ml-db 
  template:
    metadata:
      labels: 
        app: ml-db
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: database
          image: postgres:latest 
          ports:
            - containerPort: 5432 
              protocol: TCP
          imagePullPolicy: IfNotPresent
