kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: infrastracture-ingress-network 
  namespace: ingress-nginx 
  annotations:
    kubernetes.io/class: infra-network 
spec:
  rules:
    host: www.cloud-infrastructure.com 
      http:
        paths:
          path: / 
          pathType: Prefix 
            backend: 
              serviceName: ml-application-service
              servicePort:
                number: 7000
